--- a/admin/assets/style.css
+++ b/admin/assets/style.css
@@ -1,5 +1,5 @@
 
-.c-migration-block {
+.sp-block {
     margin-top: 20px;
     background-color: #f5f9f9;
     border: 1px solid;
@@ -7,14 +7,19 @@
     padding: 19px
 }
 
-.c-migration-block_title {
+.sp-clear:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+.sp-block_title {
     color: #000;
     font-size: 20px;
     padding: 3px 53px 12px 0;
     position: relative;
     min-height: 25px;
 }
-.c-migration-filter{
+.sp-filter{
     /*margin: 10px 0;*/
     /*background: #ccc;*/
     /*padding: 10px;*/
@@ -22,93 +27,107 @@
     float: right;
 }
 
+.sp-table {
+    display: table;
+    border-collapse: collapse;
+    width: 100%;
+}
 
-table.c-migration-config {
+.sp-table .sp-row {
+    display: table-row;
+}
+
+.sp-table .sp-col {
+    display: table-cell;
+    vertical-align: top;
+}
+
+table.sp-config {
     border-collapse: collapse;
     /*background: #f5f9f9;*/
     margin-bottom: 20px !important;
 }
 
-table.c-migration-config thead td{
+table.sp-config thead td{
     /*text-align: center;*/
 
 }
-table.c-migration-config td{
+table.sp-config td{
     /*border-bottom: 1px solid #c4ced2;*/
 
     padding: 5px;
 }
 
-table.c-migration-list {
+table.sp-list {
     border-collapse: collapse;
 }
 
-table.c-migration-list td.c-migration-list-l{
+table.sp-list td.sp-list-l{
     width: 110px;
     vertical-align: middle;
     text-align: left;
     padding: 5px 5px 5px 0;
 }
-table.c-migration-list td.c-migration-list-r{
+table.sp-list td.sp-list-r{
     vertical-align: middle;
     text-align: left;
     padding: 5px 0 5px 5px;
 }
 
 
-table.c-migration-status {
+table.sp-status {
     border-collapse: collapse;
 }
 
-table.c-migration-status td.c-migration-status-l{
+table.sp-status td.sp-status-l{
     vertical-align: middle;
     text-align: left;
     padding: 5px 5px 5px 0;
 }
-table.c-migration-status td.c-migration-status-r{
+table.sp-status td.sp-status-r{
     vertical-align: middle;
     text-align: left;
     padding: 5px 0 5px 5px;
 }
 
-.c-migration-item-installed,
-.c-migration-item-new,
-.c-migration-item-unknown {
+.sp-item-installed,
+.sp-item-new,
+.sp-item-unknown {
     text-decoration: none;
 }
 
-.c-migration-item-installed,
-.c-migration-item-installed:link,
-.c-migration-item-installed:hover,
-.c-migration-item-installed:visited,
-a.c-migration-item-installed,
-a.c-migration-item-installed:link,
-a.c-migration-item-installed:hover,
-a.c-migration-item-installed:visited
+.sp-item-installed,
+.sp-item-installed:link,
+.sp-item-installed:hover,
+.sp-item-installed:visited,
+a.sp-item-installed,
+a.sp-item-installed:link,
+a.sp-item-installed:hover,
+a.sp-item-installed:visited
 {
     color: #080;
 }
 
-.c-migration-item-new,
-.c-migration-item-new:link,
-.c-migration-item-new:hover,
-.c-migration-item-new:visited,
-a.c-migration-item-new,
-a.c-migration-item-new:link,
-a.c-migration-item-new:hover,
-a.c-migration-item-new:visited
+.sp-item-new,
+.sp-item-new:link,
+.sp-item-new:hover,
+.sp-item-new:visited,
+a.sp-item-new,
+a.sp-item-new:link,
+a.sp-item-new:hover,
+a.sp-item-new:visited
 {
     color: #a00;
 }
 
-.c-migration-item-unknown,
-.c-migration-item-unknown:link,
-.c-migration-item-unknown:hover,
-.c-migration-item-unknown:visited,
-a.c-migration-item-unknown,
-a.c-migration-item-unknown:link,
-a.c-migration-item-unknown:hover,
-a.c-migration-item-unknown:visited
+.sp-item-unknown,
+.sp-item-unknown:link,
+.sp-item-unknown:hover,
+.sp-item-unknown:visited,
+a.sp-item-unknown,
+a.sp-item-unknown:link,
+a.sp-item-unknown:hover,
+a.sp-item-unknown:visited
 {
     color: #00a;
 }
