--- a/admin/assets/style.css
+++ b/admin/assets/style.css
@@ -4,6 +4,8 @@
     border: 1px solid;
     border-color: #c4ced2 #dce7ed #dce7ed;
     padding: 19px;
+    /*width: 33%;*/
+    /*float: left;*/
 }
 
 .sp-block:after {
@@ -16,10 +18,15 @@
     display: none;
 }
 
+.sp-block_head {
+    color: #000;
+    font-size: 20px;
+    position: relative;
+    min-height: 25px;
+}
 .sp-block_title {
     color: #000;
     font-size: 20px;
-    padding: 0;
     position: relative;
     min-height: 25px;
     cursor: pointer;
