--- a/admin/assets/style.css
+++ b/admin/assets/style.css
@@ -1,10 +1,3 @@
-.sp-scroll {
-    overflow-x: auto;
-    overflow-y: scroll;
-    max-height: 425px;
-    padding: 0 15px 0 0;
-}
-
 .sp-block {
     background-color: #f5f9f9;
     border: 1px solid;
@@ -30,6 +23,17 @@
 .sp-block.sp-active .sp-block_body {
     display: inline;
 }
+
+.sp-block-scroll {
+    padding-right: 0;
+}
+
+.sp-scroll {
+    overflow-x: auto;
+    overflow-y: scroll;
+    max-height: 425px;
+}
+
 
 .sp-noblock_body {
     display: block;
