--- a/admin/assets/style.css
+++ b/admin/assets/style.css
@@ -209,3 +209,24 @@ a.sp-item-unknown:visited {
 .sp-field {
     margin-bottom: 20px;
 }
+
+#schema_progress_current,
+#schema_progress_full {
+    display: none;
+    height: 10px;
+    background: #eee
+}
+
+#schema_progress_current .bar {
+    display: block;
+    height: 10px;
+    background: #99d;
+    width: 0;
+}
+
+#schema_progress_full .bar {
+    display: block;
+    height: 10px;
+    background: #9d9;
+    width: 0;
+}
