--- a/admin/assets/style.css
+++ b/admin/assets/style.css
@@ -193,6 +193,13 @@ a.sp-item-unknown:visited {
     border-radius: 10px;
 }
 
+.sp-tag {
+    padding: 0 10px;
+    background: #ccc;
+    color: #b33;
+    border-radius: 10px;
+}
+
 .sp-out-rarr {
     color: #555;
 }
