--- a/admin/assets/style.css
+++ b/admin/assets/style.css
@@ -211,6 +211,10 @@ a.sp-item-unknown:visited {
     margin-bottom: 20px;
 }
 
+#schema_progress_current {
+    margin-top: 10px;
+}
+
 #schema_progress_current,
 #schema_progress_full {
     display: none;
