--- a/admin/assets/style.css
+++ b/admin/assets/style.css
@@ -5,24 +5,21 @@
     padding: 10px;
 }
 
+.sp-block.sp-block_builders{
+    padding: 0;
+}
+
 .sp-block:after {
     content: '';
     display: block;
     clear: both;
 }
 
-.sp-block .sp-block_body {
-    display: none;
-}
-
-.sp-block.sp-white,
-.sp-block.sp-active {
+.sp-block.sp-white {
     background: #fff;
 }
 
-.sp-block.sp-active .sp-block_body {
-    display: inline;
-}
+
 
 .sp-block-scroll {
     padding-right: 0;
@@ -46,12 +43,25 @@
     min-height: 25px;
 }
 
-.sp-block_title {
-    color: #000;
-    font-size: 20px;
-    position: relative;
-    min-height: 25px;
+.sp-builder_group{
+    font-weight: bold;
+    padding: 5px 10px;
+}
+
+.sp-builder_title {
+    /*color: #000;*/
+    /*font-size: 20px;*/
+    /*position: relative;*/
+    /*min-height: 25px;*/
     cursor: pointer;
+    padding: 5px 10px;
+}
+
+.sp-builder_title:hover{
+    background: #eee;
+}
+.sp-builder_title.sp-active {
+    background: #ccc;
 }
 
 .sp-group {
@@ -196,6 +206,7 @@ a.sp-item-unknown:visited {
     cursor: default;
     font-weight: bold;
 }
+
 .sp-new,
 .sp-older {
     padding: 0 10px;
