--- a/admin/assets/style.css
+++ b/admin/assets/style.css
@@ -215,43 +215,30 @@ a.sp-item-unknown:visited {
     color: #00a;
 }
 
-.sp-modified {
-    padding: 0 10px;
-    background: #ffcc00;
-    color: #000;
-    border-radius: 4px;
-    cursor: default;
-    /*font-weight: bold;*/
-}
 
-.sp-new,
-.sp-older {
-    padding: 0 10px;
-    background: #b00;
-    color: #fff;
-    border-radius: 4px;
-    cursor: default;
-    /*font-weight: bold;*/
-}
-
-.sp-status {
+.sp-label {
     padding: 0 10px;
     background: #eee;
+    color: #000;
     border-radius: 4px;
     border-bottom: 1px solid #ccc;
     border-right: 1px solid #ccc;
     cursor: default;
-    margin-top: 5px
 }
 
-.sp-tag {
-    padding: 0 10px;
-    border-radius: 4px;
-    cursor: default;
+.sp-label-tag {
     background: #ffbbff;
-    /* color: #fff; */
     border-bottom: 1px solid #ee33ff;
     border-right: 1px solid #ee33ff;
+}
+
+.sp-label-modified {
+    background: #ffcc00;
+}
+
+.sp-label-older {
+    background: #b00;
+    color: #fff;
 }
 
 .sp-optgroup-group {
@@ -327,6 +314,7 @@ a.sp-item-unknown:visited {
     white-space: pre-wrap;
     margin-bottom: 5px;
 }
+
 .sp-out:last-child {
     margin-bottom: 0;
 }
