--- a/admin/assets/style.css
+++ b/admin/assets/style.css
@@ -329,3 +329,22 @@ a.sp-item-unknown:visited {
 .sp-out-list-empty {
     padding: 0 0 10px
 }
+
+#migration_container {
+    position: relative;
+}
+
+#migration_loader {
+    /*position: fixed;*/
+    /*top: 20px;*/
+    /*right: 40px;*/
+    /*z-index: 200;*/
+    display: inline-block;
+    background: url("/bitrix/js/main/core/images/wait.gif") 10px center no-repeat scroll rgb(252, 247, 209);
+    border: 1px solid rgb(225, 181, 45);
+    color: black;
+    font-family: Verdana, Arial, sans-serif;
+    font-size: 11px;
+    padding: 10px 30px 10px 37px;
+    text-align: center;
+}
